# ocaml-test-runner

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  pause-community-contributions.yml
runner/: dune-project  runner.opam
runner/src/: case.ml  dune  runner.ml  test.ml
tests/example-all-fail/: Makefile  dune  expected_results.json  leap.ml
tests/example-empty-file/: expected_results.json  leap.mli  test.ml
tests/example-ounit/: dune  expected_results.json
tests/example-partial-fail/: expected_results.json  leap.ml  test.ml
tests/example-single-test/: dune  dune-project  expected_results.json
tests/example-success/: expected_results.json  leap.ml
tests/example-syntax-error/: .merlin  dune  dune-project  expected_results.json  leap.ml
tests/example-with-tasks/: Makefile  dune  expected_results.json  lucian_luscious_lasagna.ml  test.ml
